feat: build stfed
Signed-off-by: 117503445 <t117503445@gmail.com>

--- a/src/stfed/Dockerfile
+++ b/src/stfed/Dockerfile
@@ -4,6 +4,6 @@ WORKDIR /app
 RUN cargo build --release
 RUN ls /app/target/release
 
-FROM gcr.io/distroless/cc
-COPY --from=build-env /app/target/release/hello-world-distroless /
-CMD ["./hello-world-distroless"]
+FROM gcr.io/distroless/cc-debian12
+COPY --from=build-env /app/target/release/stfed /
+CMD ["./stfed"]
