--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: build
-        run: cd ./src/stignore-generator && docker built -t 117503445/stignore-generator-builder -f Dockerfile_build . && docker run --rm -v $(pwd):/app 117503445/stignore-generator-builder
+        run: cd ./src/stignore-generator && docker build -t 117503445/stignore-generator-builder -f Dockerfile_build . && docker run --rm -v $(pwd):/app 117503445/stignore-generator-builder
 
       # https://github.com/softprops/action-gh-release
       - name: release
