--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,8 @@
 name: release
 
-on:
-  push:
-    tags:
-      - 'v*.*.*'
+on: push
+    # tags:
+    #   - 'v*.*.*'
       
 permissions:
   contents: write
