build: git version
Signed-off-by: 117503445 <t117503445@gmail.com>

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - run: cd ./src/stignore-generator && ../common/write_git_info.sh
+      - run: ./src/common/write_git_info.py
         env:
           SHA: ${{ github.sha }}
 
